@@ -162,5 +162,9 @@ refresh:
 patch-libtool:
 	cp "../libtool" .
 	sed -e 's,build_libtool_libs=no,build_libtool_libs=yes,g' libtool > 2; mv 2 libtool
-	sed -e 's,LIBTOOL =,LIBTOOL2 =,g' Makefile > 2 && echo "LIBTOOL = bash ./libtool" > 1 && cat 1 2 > Makefile
+	echo "LIBTOOL = bash ./libtool" > 1
+	echo "LTCOMPILE = bash ./libtool --mode=compile $(COMPILE)" >> 1
+	sed -e 's,LIBTOOL =,LIBTOOL2 =,g' Makefile > 2
+	sed -e 's,LTCOMPILE =,LTCOMPILE2 =,g' 2 > 3
+	cat 1 3 > Makefile
 	touch *.c
